--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "@ckeditor/ckeditor5-vue": "^2.0.1",
         "@headlessui/vue": "^1.4.1",
         "@heroicons/vue": "^1.0.4",
+        "caniuse-lite": "^1.0.30001376",
         "moment": "^2.29.1",
         "vuejs-paginator": "^2.0.2"
     }
