--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,12 @@
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "inertiajs/inertia-laravel": "^0.3.5",
+        "intervention/image": "^2.7",
         "laravel/framework": "^8.40",
         "laravel/jetstream": "^2.3",
         "laravel/sanctum": "^2.6",
         "laravel/tinker": "^2.5",
+        "maestroerror/php-heic-to-jpg": "^0.3.2",
         "spatie/laravel-permission": "^5.1",
         "svnwa/inertiavuepaginator": "^1.0",
         "tightenco/ziggy": "^1.0"
