--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "caniuse-lite": "^1.0.30001376",
         "heic2any": "^0.0.3",
         "moment": "^2.29.1",
+        "v-img": "^0.2.0",
         "vuejs-paginator": "^2.0.2"
     }
 }
